@@ -1,5 +1,5 @@
 
-R version 2.9.0 Under development (unstable) (2008-10-31 r46802)
+R version 2.9.0 Under development (unstable) (2008-11-21 r47002)
 Copyright (C) 2008 The R Foundation for Statistical Computing
 ISBN 3-900051-07-0
 
@@ -1210,11 +1210,18 @@ Warning messages:
 > stopifnot(all.equal(1/(1+mu), dnbinom(0, size = 1, mu = mu), tol=1e-13))
 > ## was wrong in 2.7.2 (only)
 > 
+> 
 > ## Non-central F for large x
 > x <- 1e16 * 1.1 ^ (0:20)
 > dP <- diff(pf(x, df1=1, df2=1, ncp=20, lower.tail=FALSE, log=TRUE))
 > stopifnot(-0.047 < dP, dP < -0.0455)
 > ## pf(*, log) jumped to -Inf prematurely in 2.8.0 and earlier
+> 
+> 
+> ## Non-central Chi^2 density for large x
+> stopifnot(0 == dchisq(c(Inf, 1e80, 1e50, 1e40), df=10, ncp=1))
+> ## did hang in 2.8.0 and earlier (PR#13309).
+> 
 > 
 > cat("Time elapsed: ", proc.time() - .ptime,"\n")
 Time elapsed:  4.632 0.036 5.125 0 0 
